--- a/lib/oauth-success.html
+++ b/lib/oauth-success.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenCode - Authentication Successful</title>
+    <title>Claw - Authentication Successful</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -522,7 +522,7 @@
     <div class="vignette"></div>
 
     <div class="container">
-        <div class="logo">
+        <!-- <div class="logo">
             <svg width="300" height="54" viewBox="0 0 234 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18 30H6V18H18V30Z" fill="#4B4646"/>
                 <path d="M18 12H6V30H18V12ZM24 36H0V6H24V36Z" fill="#B7B1B1"/>
@@ -541,14 +541,14 @@
                 <path d="M234 24V30H216V24H234Z" fill="#4B4646"/>
                 <path d="M216 12V18H228V12H216ZM234 24H216V30H234V36H210V6H234V24Z" fill="#F1ECEC"/>
             </svg>
-        </div>
+        </div> -->
 
         <div class="terminal-window">
             <div class="terminal-header">
                 <div class="terminal-button red"></div>
                 <div class="terminal-button yellow"></div>
                 <div class="terminal-button green"></div>
-                <div class="terminal-title">opencode-openai-codex-auth@4.2.0 — OAuth Authentication</div>
+                <div class="terminal-title">claw-openai-codex-auth@4.2.0 — OAuth Authentication</div>
             </div>
 
             <div class="status-box">
@@ -579,7 +579,7 @@
                     </div>
                     <div class="terminal-line">
                         <span class="prompt">✓</span>
-                        <span class="success">OpenCode ready for deployment</span>
+                        <span class="success">Claw ready for deployment</span>
                     </div>
                 </div>
             </div>
@@ -599,7 +599,7 @@
         canvas.height = window.innerHeight;
 
         // Mix of characters including OpenCode themed ones
-        const chars = 'OPENCODE▸✓▹▸◂◃◄►◀▶←→↑↓⟨⟩∧∨∩∪⊂⊃⊆⊇∈∉∀∃∄∅∞≡≠≤≥±∓⊕⊗⊙01';
+        const chars = 'CLAW▸✓▹▸◂◃◄►◀▶←→↑↓⟨⟩∧∨∩∪⊂⊃⊆⊇∈∉∀∃∄∅∞≡≠≤≥±∓⊕⊗⊙01';
         const fontSize = 16;
         const columns = Math.floor(canvas.width / fontSize);
 
